<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>stereovoxelnet</name>
  <version>0.0.0</version>
  <description>The stereovoxelnet package</description>
  <maintainer email="f.gegenmantel@pem.rwth-aachen.de">Finn Gegenmantel</maintainer>
  <license>MIT</license>
  <license>PEM</license>

  <url type="website">https://lhy.xyz/stereovoxelnet</url>

  <author email="li.hongyu1@northeastern.edu">Hongyu Li</author>
  <author email="f.gegenmantel@pem.rwth-aachen.de">Finn Gegenmantel</author>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>stereo_image_proc</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
